Yaml Files/student-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-service-mysql
spec:
  selector:
    matchLabels:
      app: student-service-mysql
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: student-service-mysql
    spec:
      containers:
        - name: student-service
          image: khushboo091991/studentservice:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: "256Mi"
---

apiVersion: v1 # Kubernetes API version
kind: Service
metadata:
  name: student-service-mysql
spec:
  selector:
    app: student-service-mysql
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
